# docs/swagger.json
@@ -24,7 +24,7 @@
                 "summary": "批量删除管理员",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "Account ID 多个用,分开",
                         "name": "ids",
                         "in": "path",
@@ -74,6 +74,322 @@
                 }
             }
         },
+        "/api/v1/business/goods": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "商家"
+                ],
+                "summary": "分页查询商家商品",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "页大小",
+                        "name": "pageSize",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "页数",
+                        "name": "page",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "desc",
+                        "schema": {
+                            "$ref": "#/definitions/entity.ResponseData"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "商家"
+                ],
+                "summary": "添加商品",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "商品名称",
+                        "name": "goods_name",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "file",
+                        "description": "商品图片",
+                        "name": "goods_photo",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "商品描述",
+                        "name": "goods_description",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "是否上架",
+                        "name": "goods_listing",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "number",
+                        "description": "商品价格",
+                        "name": "goods_price",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "商品单位 份、杯、瓶",
+                        "name": "goods_unit",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "排序",
+                        "name": "goods_sort",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "商品种类ID",
+                        "name": "goods_type_id",
+                        "in": "formData"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "desc",
+                        "schema": {
+                            "$ref": "#/definitions/entity.ResponseData"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/business/goods/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "商家"
+                ],
+                "summary": "查询商品By ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "商品ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "desc",
+                        "schema": {
+                            "$ref": "#/definitions/entity.ResponseData"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "商家"
+                ],
+                "summary": "修改商品",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "商品ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "商品名称",
+                        "name": "goods_name",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "file",
+                        "description": "商品图片",
+                        "name": "goods_photo",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "商品描述",
+                        "name": "goods_description",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "是否上架",
+                        "name": "goods_listing",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "number",
+                        "description": "商品价格",
+                        "name": "goods_price",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "商品单位 份、杯、瓶",
+                        "name": "goods_unit",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "排序",
+                        "name": "goods_sort",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "商品种类ID",
+                        "name": "goods_type_id",
+                        "in": "formData"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "desc",
+                        "schema": {
+                            "$ref": "#/definitions/entity.ResponseData"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "商家"
+                ],
+                "summary": "商品删除",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "商品ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "desc",
+                        "schema": {
+                            "$ref": "#/definitions/entity.ResponseData"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/business/goods/{id}/{downorup}": {
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "商家"
+                ],
+                "summary": "上架/下架商品",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "商品ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "是否上架",
+                        "name": "downorup",
+                        "in": "path"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "desc",
+                        "schema": {
+                            "$ref": "#/definitions/entity.ResponseData"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/business/goodstype": {
             "get": {
                 "security": [
@@ -90,7 +406,7 @@
                 "tags": [
                     "商家"
                 ],
-                "summary": "查询商家商品种类",
+                "summary": "分页查询商家商品种类",
                 "parameters": [
                     {
                         "type": "string",
@@ -254,6 +570,33 @@
                         "required": true
                     }
                 ],
+                "responses": {
+                    "200": {
+                        "description": "desc",
+                        "schema": {
+                            "$ref": "#/definitions/entity.ResponseData"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/business/goodstypes": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "商家"
+                ],
+                "summary": "查询商家商品种类ID和名称",
                 "responses": {
                     "200": {
                         "description": "desc",
